app/mail/stylesheets/weekly_digest.scss
@mixin colored-a($color) {
    color: $color ;
    span { color: $color ; }
}

@mixin button($border-color, $bg-color, $fg-color) {
    @include colored-a($fg-color) ;
    text-decoration: none ;
    display: block ; 
    border: 1px solid $border-color ; 
    background-color: $bg-color ; 
    span {
        text-decoration: none ;
        display: block ; 
        padding: 3px 5px ; 
    }
}

@mixin red-button { @include button(#82312f, #b53f3c, #ffffff) ; }
@mixin blue-button { @include button(#2e4359, #3b6085, #ffffff) ; }

$main-width: 610px ;
$serifs: Rockwell, Georgia, Times, serif ;
$sans-serifs: Helvetica, sans ;
$body-serifs: Georgia, Times, serif ;

body { text-align: center ; background-color: #ffffff ; }

p { color: #656565 ; font-size: 18px ; line-height: 1.8 ; font-family: $body-serifs ; line-height: 1.8 ; }

#body { width: 650px ; text-align: left ; border-spacing: 20px ; background-color: #ffffff ; }

#header {
    table { width: $main-width ; border-spacing: 0px ; }
    #logo { width: 225px ; border-width: 0px ; }
    #community_name { 
        color: #b53f3c; font-family: $serifs ; font-size: 22px ; font-weight: bold ; text-align: left ; vertical-align: bottom ;  line-height: 32px ;
    }
    #week_of { text-align: right ; color: #3b6085 ; font-family: $serifs ; font-size: 14px ; font-weight: bold ; vertical-align: bottom ; line-height: 32px ; }
}
a { @include colored-a(#b53f3c) ; }

#intro h1 { font-size: 20px ; color: #464646 ; font-family: $serifs ; }
#intro p { font-family: $sans-serifs; font-size: 13px ; }

h2 { color: #3b6085 ; font-size: 25px ; font-family: $serifs ; margin-bottom: 0px ; padding-top: 20px ; border-top: 1px dashed #b0b0b0 ; font-weight: normal ; }


p.h2-sub { color: #666666 ; font-size: 13px ; margin-top: 0px ; font-family: $serifs ; }

p.action { line-height: 1.2 ; font-size: 12px ; }
p.action strong { color: #3b6085; }

#footer {
    text-align: center ;
    
    #posting {
        width: $main-width ; border-spacing: 10px ; 
        td.link { width: 155px ; background-color: #b53f3c ; text-align: center ; border: 1px solid #82312f ; padding: 5px }
        
        td a { @include colored-a(#fff) ; text-decoration: none ; font-family: $serifs ; font-size: 11px ; width: 155px ; }
    }
    
    #settings { font-family: $sans-serifs; font-size: 12px ; }
    
}

.calendar {
    width: 50px ; text-align: center ;
    .short-month { border: 1px solid #b55f58 ; border-bottom-width: 0px ; background-color: #b35750 ; color: #ecd5d4 }
    .day { border: 1px solid #cfcfcf ; border-top-width: 0px ; background-color: #f2f2f2 ; height: 30px ; line-height: 30px ; color: #666666 ; }
}


table.event .date-time { 
    vertical-align: top ; width: 60px ; 
    .time { font-size: 12px ; font-family: $serifs ; color: #3b6085 ; padding-top: 5px ; text-align: center ; }
}

table.event, table.announcement {
    width: $main-width ; 
    border-top: 1px solid #3b6085 ; 
    padding: 10px 0px; 

    
    .body p, p.body { padding-bottom: 5px ; }

    .posted-at { vertical-align: top ; text-align: right ; color: #3b6085 ; }
    .name, .name a { color: #252525 ; font-size: 20px ; text-decoration: none ; }
    .posted-by { color: #af412f ; font-family: $serifs ; }
    .reply { border-top: 1px solid #dadada ; width: 540px ; }
    .reply p { line-height: 1.2 ; margin-top: 5px ; margin-bottom: 5px ; }
    .reply p.body { font-size: 15px ; margin-top: 0px ; }
    .reply .avatar { 
        vertical-align: top ; width: 35px ; 
        img { margin-top: 5px ; } 
    }
    .reply .posted-at { padding-top: 5px ; }
}

.event-reply, .announcement-reply {
    margin-left: 410px ; 
    margin-top: 10px ; 
    a { @include red-button ; font-size: 13px ; font-family: $serifs ; text-align: center ; }
}

.more-replies a { 
    @include colored-a(#3b6085) ; text-decoration: none ; 
    span { text-decoration: none ; }
}

.more-replies { text-align: right ; }

table.announcement { width: $main-width ; border-top: 1px solid #3b6085 ; padding: 10px 0px; }

.announcements-feed {
    border-spacing: 5px ; 
    
    .name, .name a { color: #3b6085 ; font-size: 18px ; font-family: $serifs ; }
    .subscribe { width: 75px ; }
    .message { width: 130px ; }
    .subscribe a { @include red-button ; text-align: center ; font-family: $serifs ; }
    .message a { @include blue-button ; text-align: center ; font-family: $serifs ; }

}

.announcement .reply { margin-left: 60px ; }

